# my-rust-web

./: .gitignore  Cargo.toml
http/src/: httprequest.rs  httpresponse.rs
httpserver/: Cargo.toml
httpserver/data/: orders.json
httpserver/src/: handler.rs  main.rs  router.rs  server.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
webapp/: Cargo.toml
webservice/: Cargo.toml
webservice/src/: db.sql  errors.rs  main.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs
webservice/src/handlers/: course.rs  general.rs
webservice/src/models/: course.rs  teacher.rs
